Image view: fix alignment on mobile devices.

--- a/viewserver/static/css/Default-layout.css
+++ b/viewserver/static/css/Default-layout.css
@@ -202,14 +202,14 @@ blockquote p {
 .imageview .next { top: 0; right: 0; height: 100%; }
 .imageview .prev, .imageview .next, .imageview .back, .imageview .link {
   position: fixed;
-  z-index:  1003;
+  z-index:  1004;
   width:    10%;
   overflow: hidden;
   display:  table;
 }
 
-.imageview .back { z-index: 1004; top: 0; }
-.imageview .link { z-index: 1002; bottom: 0; }
+.imageview .back { z-index: 1005; top: 0; }
+.imageview .link { z-index: 1003; bottom: 0; }
 .imageview .back, .imageview .link {
   height: 10%;
   width:  100%;
@@ -236,16 +236,21 @@ blockquote p {
   color: rgba(0, 0, 0, 0.4);
 }
 
-.imageview .wrap, .imageview .view {
-  display: block;
-  max-width:  90%;
-  max-height: 90%;
-  margin: 0 auto;
+.imageview .wrap {
+  display:  block;
+  position: fixed;
+  z-index:  1002;
+  top:      50%;
+  left:     10%;
+  right:    10%;
+  height:   80%;
+  width:    80%;
+  text-align: center;
 }
 
-.imageview .wrap {
-  position: relative;
-  top: 50vh;
+.imageview .view {
+  max-width:  100%;
+  max-height: 100%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
